--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,11 @@
 		android:text="Hello World!"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
+
+	<TextView
+		android:id="@+id/text2"
+		android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+		android:layout_below="@id/text"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
 </RelativeLayout>
